--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700|Lato:400italic);
+@import uarl(http://fonts.googleapis.com/css?family=Open+Sans:700|Lato:400italic);
 /* START GLOBAL CSS */
 html, body {
 	/* Align text to the center; set the font to Lato, set margins to 0 (window/container edge) */
@@ -14,6 +14,7 @@ html, body {
 	min-height: 100%;
 	min-width: 900px;
 	position: relative;
+	display: none;
 }
 a:visited {
 	/* Make visited links remain black, instead of turning purple */
@@ -99,6 +100,7 @@ a {
 	right: 50%;
 	margin-right: -420px;
 	top: 10px;
+	display: none;
 }
 /* GLOBAL -> START Navigation Bar CSS */
 /* css motto - "whatever works" */
@@ -190,138 +192,6 @@ a {
 	box-shadow: 0px 0px 8px #888888;
 }
 /* END Excluding Product Page CSS */
-
-/* START Home Page Specific CSS */
-.himage {
-	border: 1px solid;
-	border-color: #A7A7A7;
-	height: 150px;
-	width: 150px
-}
-#database {
-	/* Align database 420 pixels (420/900 - Not on the browser window edge) left from center */
-	position: absolute;
-	left: 50%;
-	margin-left: -420px;
-	top: 10px;
-}
-/* END Home Page Specific CSS */
-
-/* START Product Page Specific CSS */
-#pheader {
-	/* Header for the product page; extra height for the product navigation bar */
-	background-color: #86CEE4;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 180px;
-}
-#productimage {
-	/* Styling for the product image; set dimensions to 290x582 and create a 1 px border with the colour #A7A7A7 */
-	width: 290px;
-	height: 582px;
-	border: 1px solid;
-	border-color: #A7A7A7;
-}
-.productimage {
-	/* left side */
-	width: 450px;
-	float: left;
-}
-.producttext {
-	/* right side */
-	width: 450px;
-	float: right;
-}
-#products {
-	/* Padding */
-	padding-top: 15px;
-}
-#product_location {
-	/* Style for the product location bar; Create 2px border with the colour #A7A7A7, capitalise every letter */
-	border: 2px solid;
-	border-color: #A7A7A7;
-	text-transform: uppercase;
-	width: 100%;
-}
-#product_location a {
-	/* Remove underline from links */
-	text-decoration: none;
-}
-#pcontent {
-	/* above height = 187px */
-	margin: 202px auto;
-	width: 900px;
-	/* Javascript changes the below value to inherit on page load */
-	display: none;
-}
-/* Same thing as the navigation bar, but without the underline animation */
-.productinfo_upper {
-	/* Separate Name, Price and Stock from Description */
-	border: 2px solid;
-	border-color: #A7A7A7;
-}
-.productinfo_lower {
-	/* Separate Description from Name, Price and Stock */
-	border: 2px solid;
-	border-color: #A7A7A7;
-	margin-top: 15px;
-}
-#productname {
-	/* Set the product name to size 30 and make bold. */
-	font-weight: 700;
-	font-size: 30px;
-}
-#productcode {
-	font-size: 12px;
-}
-#productdescription {
-	margin-bottom: 5px;
-	padding: 5px;
-}
-#productbarcode_wrapper {
-	padding-top: 5px;
-	padding-bottom: 10px;
-}
-#productbarcode_wrapper_subwrapper {
-	width: 100px;
-}
-#product-navigation-bar {
-	background-color: #333;
-	margin-top: -7px;
-}
-#product-navigation-bar ul li a {
-	color: #fff;
-	text-decoration: none;
-	display: block;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 12px;
-	position: relative;
-	-webkit-transition: color .5s;
-	-moz-transition: color .5s;
-	-ms-transition: color .5s;
-	-o-transition: color .5s;
-	transition: color .5s;
-	padding: 15px 25px;
-}
-#product-navigation-bar ul li a:after {
-	content: '';
-	display: block;
-	position: absolute;
-	right: -3px;
-	top: 5px;
-	height: 35px;
-	width: 6px;
-	background: #FFF;
-	opacity: .5;
-}
-#product-navigation-bar ul li a:hover, #product-navigation-bar ul li.active a {
-	color: #86CEE4;
-}
-/* END Product Page Specific CSS */
 
 /* If desktop (screen) and the max width is up to 768 CSS pixels */
 @media screen and (max-width: 768px) {
