--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -5,3 +5,30 @@
 	padding-bottom: 180px;
 	width: 900px;
 }
+#cart {
+	border: 2px solid;
+	border-collapse: collapse;
+}
+#cart td {
+	border: 1px solid;
+	padding: 5px;
+}
+#cart th {
+	border: 1px solid;
+	border-bottom: 2px solid;
+	padding: 5px;
+}
+#totalprice {
+	text-align: left;
+	border: 2px solid;
+	font-size: 35px;
+	padding-left: 5px;
+}
+#checkout_navigation {
+	text-align: right;
+}
+#checkout_navigation span {
+	border: 1px solid;
+	padding: 5px;
+	font-weight: bold;
+}
