--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -1,32 +1,40 @@
 #customer_details h1 {
+	/* Align heading to the left */
 	text-align: left;
 }
 form p {
+	/* Align all p elements in the form to the left */
 	text-align: left;
 	margin: 0 auto 3px;
 }
 form p span {
+	/* Set all the labels to the same width */
 	text-align: right;
 	padding-right: 5px;
 	float: left;
 	width: 120px;
 }
 #country, #state {
+	/* Set the width of ids _country_ and _state_ to 705, to look the other input boxes */
 	width: 705px;
 }
 #details_billing input {
+	/* Set width of input boxes */
 	width: 700px;
 }
 #radio_creditcard {
+	/* Hide the id _radio_creditcard_ */
 	display: none;
 }
 #radio_paypal {
+	/* Hide the id _radio_paypal_. And provide formatting to its contents */
 	display: none;
 	text-align: center;
 	margin-top: 20px auto;
-	color:#090;
+	color: #090;
 	font-weight: 700;
 }
 #radio_paypal img {
+	/* Spacing */
 	margin-top: 10px;
 }
