--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -1,4 +1,3 @@
-/* START Product Page Specific CSS */
 #cheader {
 	/* Header for the product page; extra height for the product navigation bar */
 	background-color: #86CEE4;
@@ -25,6 +24,10 @@
 	width: 450px;
 	float: right;
 }
+#product_found, #product_not_found {
+	/* Set visibility */
+	display: none;
+}
 #products {
 	/* Padding */
 	padding-top: 15px;
@@ -42,12 +45,11 @@
 }
 #ccontent {
 	/* above height = 187px */
-	margin: 202px auto;
+	margin: 202px auto 25px auto;
 	width: 900px;
 	/* Javascript change */
 	display: none;
 }
-/* Same thing as the navigation bar, but without the underline animation */
 .productinfo_upper {
 	/* Separate Name, Price and Stock from Description */
 	border: 2px solid;
@@ -65,19 +67,24 @@
 	font-size: 30px;
 }
 #productcode {
+	/* Set _productcode_ to font 12 */
 	font-size: 12px;
 }
 #productdescription {
+	/* Spacing */
 	margin-bottom: 5px;
 	padding: 5px;
 }
 #productbarcode_wrapper {
+	/* Spacing */
 	padding-top: 5px;
 	padding-bottom: 10px;
 }
 #productbarcode_wrapper_subwrapper {
+	/* Set width */
 	width: 100px;
 }
+/* Same thing as the navigation bar, but without the underline animation */
 #product-navigation-bar {
 	background-color: #333;
 	margin-top: -7px;
@@ -110,6 +117,6 @@
 	opacity: .5;
 }
 #product-navigation-bar ul li a:hover, #product-navigation-bar ul li.active a {
+	/* Set hover colour and active colour to the same colour */
 	color: #86CEE4;
 }
-/* END Product Page Specific CSS */
