Fix links... throwback!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700|Lato:400italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:700|Lato:400italic);
 /* START GLOBAL CSS */
 html, body {
 	/* Align text to the center; set the font to Lato, set margins to 0 (window/container edge) */
